[gd_scene load_steps=4 format=3 uid="uid://p4kgfod8jt0e"]

[ext_resource type="Script" path="res://first_prototype/objects/conversation/conversation_manager.gd" id="1_7qmuo"]
[ext_resource type="PackedScene" uid="uid://cimrnhia6rbop" path="res://first_prototype/objects/conversation/messenger_ui.tscn" id="2_kygem"]
[ext_resource type="Script" path="res://addons/got_open_ai/src/got_open_ai.gd" id="3_yhwkn"]

[node name="ConversationManager" type="Node"]
script = ExtResource("1_7qmuo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MessengerUi" parent="CanvasLayer" instance=ExtResource("2_kygem")]
visible = false
offset_left = 477.0
offset_top = 140.0
offset_right = 1377.0
offset_bottom = 640.0

[node name="GotOpenAi" type="Node" parent="."]
script = ExtResource("3_yhwkn")

[connection signal="text_input_entered" from="CanvasLayer/MessengerUi" to="." method="_on_messenger_ui_text_input_entered"]
